[tool.poetry]
name = "meta_system"
version = "0.1.0"
description = ""
authors = []
license = "Apache 2.0"

[[tool.poetry.source]]
url = "https://pypi.org/simple"
name = "public" # pypi name is reserved...
default = true

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
docker = "^6.1.3"
pydash = "^7.0.6"
pebble = "^5.0.3"
pyyaml = "^6.0.1"
flask-cors = "^4.0.0"
pyjwt = "^2.8.0"
flask-jwt-extended = "^4.5.2"
flask-bcrypt = "^1.0.1"
psutil = "^5.9.5"
flask-pymongo = "^2.3.0"
flask_mail = "^0.9.1"
uritools = "^4.0.2"
pymodm = "^0.4.3"
pandas = "^2.0.1"
sh = "^2.0.6"
pydantic = "^2.3.0"
pymongo = "^4.5.0"
circus = "^0.18.0"
chaussette = "^1.3.0"
meinheld = "^1.0.2"
mkdocs = "^1.5.3"
tqdm = "^4.66.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
poetry = "^1.6.1"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
